[package]
name = "paraswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-this-or-that = "0.4"
ethers = { version = "2.0" }
anyhow = "1.0.72"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
